--- a/gb/23/1/7/n13901749.md
+++ b/gb/23/1/7/n13901749.md
@@ -3,17 +3,17 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>外媒关注中国名人死亡潮 质疑中共疫情数据</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901100-GettyImages-1453757094-600x400.jpg" />
-<h6>随着COVID-19病毒在全中国迅速传播，中国各地名人和公众人物接二连三的死亡事件令中国人和多家外媒的关注。2023年1月2日，北京一家医院的医院工作人员和一位亲属在繁忙的急诊室里用轮床推着一具尸体。（Getty Images）
+<h6>随着COVID-19病毒在全中国迅速传播，中国各地名人和公众人物接二连三的死亡事件令中国人和多家外媒的关注。2023年1月2日，北京一家医院的医院工作人员和一位亲属在繁忙的急诊室里用轮床推着一具尸体。(Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年01月08日讯】（大纪元记者夏雨综合报导）随着COVID-19病毒在全中国迅速传播，医院和火葬场不堪重负，中国各地名人和公众人物接二连三的死亡事件令中国人和多家外媒的关注。人们质疑中国染疫死亡人数远高于中共当局报告的数字。</p>
-<p><ahref="https://www.bbc.com/news/world-asia-china-64173824">BBC</a>报导，越来越多的中国公众人物死亡消息被公开，促使人们质疑中共官方的Covid死亡人数。</p>
+	<p>【大纪元2023年01月08日讯】（大纪元记者夏雨综合报导）随着COVID-19病毒在全中国迅速传播，医院和火葬场不堪重负，中国各地名人和公众人物接二连三的死亡消息，引发很多中国人和多家外媒的关注。人们质疑中国染疫死亡人数远高于中共当局报告的数字。</p>
+<p><ahref="https://www.bbc.com/news/world-asia-china-64173824">BBC</a>报导，越来越多的中国公众人物死亡消息被公开，促使人们质疑中共官方的COVID死亡人数。</p>
 <p>英国《卫报》报导，中国名人死亡浪潮引发人们对中国实际死亡人数的怀疑，在公众人物死亡人数激增后，中国社交媒体用户质疑中共官方统计数据。</p>
 <p>《金融时报》报导，中国名人染疫死亡，颠覆中共淡化疫情爆发的宣传努力。</p>
 <h2>中国名人接连死亡 打破中共官方说辞</h2>
 <p>其中《卫报》1月7日报导，中国社交媒体上的许多人都在谈及演员龚锦棠的去世，他在1月1日去世。龚锦棠多年来在中国家喻户晓，当地媒体报导了他的死讯，但死因尚不清楚。</p>
 <p>上个月，曾在2008年北京奥运会上演出的京剧演员、40岁的储兰兰突然去世，令京剧迷震惊。北京戏曲学院发布的讣告称，曾在该校任教的储病亡。当地媒体也报导了她的死讯，但没有详细说明死因。传闻指她因中共病毒（新冠）并发症猝死，留下7岁的儿子。</p>
-<p>中共2022年12月7日宣布取消清零政策，导致感染激增，医院和火葬场迅速不堪重负。12月下旬，中共卫健委停止发布每日Covid数据。世界卫生组织上周批评中共对染疫死亡“非常狭隘”的定义，并警告中共官方统计数据并未显示疫情的真正影响。</p>
+<p>中共2022年12月7日宣布取消清零政策，导致感染激增，医院和火葬场迅速不堪重负。12月下旬，中共卫健委停止发布每日COVID数据。世界卫生组织上周批评中共对染疫死亡“非常狭隘”的定义，并警告中共官方统计数据并未显示疫情的真正影响。</p>
 <p>《卫报》报导说，自去年12月以来，中国仅报告22例染疫死亡病例，并且大幅缩小对此类死亡人数进行分类的标准，意味着北京自己关于这一前所未有疫情浪潮的统计数据，现在被广泛认为没有反映现实。</p>
 <p>《金融时报》报导，在COVID-19大流行期间，中共宣传机构花了两年时间竭力塑造一种叙事，突出西方国家的染疫死亡人数，企图为习近平标志性的“清零”政策辩护。但在过去的几周里，中国各机构、大学和家庭发表的一系列讣告，打破了官方说辞。</p>
 <h2>中国人质疑中共官方<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85%E6%95%B0%E6%8D%AE.md#1">疫情数据</a></h2>
@@ -36,36 +36,36 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901681.md#1">中共对社媒噤声 封杀批评清零政策异议人士</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901752.md#1">博明：中共为巩固政权 罔顾全球公共卫生</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901767.md#1">大陆演员唐国强也润了？被曝现身美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901880.md#1">江西货车突然冲进出殡队伍 造成重大伤亡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064035.md#1">“苏拉”逼近广东 梅州爆洪灾 或现“三台风”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004515.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891553.md#1">入地府改变了命运  怪胎传述转生因缘劝世人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899460.md#1">【未解之谜】预言家珍妮之二 最意外的总统选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901851.md#1">【新闻看点】重庆工人抗暴击退警察 当局让步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901304.md#1">【全球新闻】救命药仅供特权阶层 大陆黑市猖獗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901823.md#1">【菁英论坛】大瘟疫降临 中国要死多少人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900765.md#1">高干子弟：军队老干部骂习 两会前或有大事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900365.md#1">【新闻看点】习近平被迫掉头 几个讯号令他震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900313.md#1">武汉医生：这波疫情巨大 令人震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900366.md#1">玄彬描述儿子长相：像我和孙艺珍的混合版</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900268.md#1">陈赫自曝中招：节目录一半突然“阳了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901055.md#1">粤剧名伶卢海潮猝逝 同剧组近期4人病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900070.md#1">“BTS”Jin训练结业式 叮嘱粉丝勿送快递信函</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901092.md#1">陈乔恩自曝患睡眠呼吸中止症 已接受手术治疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893570.md#1">骨松、焦虑、记忆衰退？你可能是缺“镁”了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901636.md#1">中医养生成疫后健康潮流 绿色东方美国开业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899573.md#1">体温升高1度免疫力增30% 日医师推荐暖身4诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901344.md#1">2023年房价会见底吗？投资机构蠢蠢欲动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900105.md#1">新研究：每天来一点梅干 可预防骨质疏松症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064147.md#1">【舞蹈三剑客】适合初学者！跟着神韵海报上的明星做“动态拉伸练习” feat. 王琛</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063593.md#1">【新唐人快报】刘军被查 中超6任董事长全落马</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063500.md#1">【晚间新闻】习惧暗杀？北京召开紧急军事会议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045529.md#1">12款维护成本最低且最棒的SUV车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062941.md#1">王友群：曾庆红与习近平的对决上演了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062177.md#1">为李玟怒怼《好声音》甄妮被提醒注意安危</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059072.md#1">自制天然香草防蚊液 远离蚊子、蜱虫叮咬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/7/n13901749.htm">外媒关注中国名人死亡潮 质疑中共疫情数据</a></p><hr>
