--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10835148.md#1" target="_blank">中华传统文化之叹——消逝的城墙（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/22/n10162566.md#1" target="_blank">共产暴政录——杀父竟成学习榜样</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
