--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065407.md#1">美众议员致函麦卡锡 要求成立UFO委员会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065431.md#1">美国海关5月抽查 发现27%织品含新疆棉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065260.md#1">拜登希望习近平出席G20峰会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065469.md#1">美零售业遭抢损失惊人 警方归咎于零保释金政策</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065420.md#1">白宫要求国会提供短期资金 以避免政府关门</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065419.md#1">美国印尼开始军演 19国参与捍卫印太稳定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/18/n10153765.md#1" target="_blank">共产暴政录——消灭宗教</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
