--- a/gb/22/10/12/n13843734.md
+++ b/gb/22/10/12/n13843734.md
@@ -22,39 +22,39 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/5/n13839310.md#1">中坜慈惠堂发挥爱 捐赠物资前进后山</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/6/n13840124.md#1">国际狮子会300-D1区与麦寮狮子会 共同捐赠七人座高龄友善服务车</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/6/n13840298.md#1">卡尔加里公司向省政府捐赠公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13920009.md#1">保存传统 池上乡元宵祈福担饭晚宴恢复举办</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919988.md#1">民主全球论坛考夫曼拜会谢国梁分享公投经验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919975.md#1">苏澳镇与石垣市缔盟28年 货贸交流登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919891.md#1">长期风蚀断裂 “琉球渔民慰灵碑” 重作雕像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065423.md#1">“月光海音乐会”感恩大自然的无常 展现夏日美好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065291.md#1">避免食安疑虑 基隆将订自治条例提高罚则</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065270.md#1">到基隆庙宇参拜 郭台铭：找回基隆的荣耀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065227.md#1">公部门与业界座谈 谢国梁：共创基隆新荣景</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9840046.md#1" target="_blank">林辉：影射“毛太阳”《十万个为什么》被批</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/31/n10265684.md#1" target="_blank">共产暴政录：中共为什么要败坏中国人的道德</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906270.md#1">玄——我亲历的故事（三）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913681.md#1">凡尘中人有仙缘 偶遇修道人出神通</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919536.md#1">【探索时分】美欧军援300坦克 助乌抗击俄国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919052.md#1">【新闻看点】学校禁谈胡鑫宇 背后有重大黑幕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/1/n13919701.md#1">【天亮时分】北约秘书长警告 2月24日俄乌决战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918697.md#1">四川取消生育登记和结婚限制 舆论翻车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918567.md#1">律师：胡鑫宇死讯公布时机可疑 或为转移视线</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918119.md#1">48岁大陆军事网红病亡 传换肾后染疫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13918066.md#1">林心如晒照庆生 与霍建华甜蜜秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917417.md#1">庆结婚十周年 郑伊健蒙嘉慧日本街头放闪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918977.md#1">梁朝伟高调进驻抖音 网友喊他千万别做一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919533.md#1">40岁胡歌官宣已婚得女 透露妻子非公众人物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918469.md#1">宋仲基官宣结婚 与英籍女友今日登记婚姻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916737.md#1">缓解疼痛 抗炎食物该怎么吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916109.md#1">运动前吃什么、何时吃最健康？专家荐9种零食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917334.md#1">肠漏致多种疾病？这样做可改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918321.md#1">2023年租金预测：温和上涨 工作室需求旺</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915802.md#1">人际关系会影响一生 哪些是你最该远离的人？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/12/n13843734.htm">狮子会捐赠电动护理床 基隆长辈照顾再升级</a></p><hr>
